ongoing 1.18 cleanup